--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
+  <div id="modal"></div>
   <!-- react will replace whats inside this -->
   <div id="root">not rendered</div>
-  
+
   <script src="App.js"></script>
 </body>
 
